[package]
name = "test-dix"
version = "0.1.0"
authors = ["moonn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
ethers = "2.0.14"
log = "0.4.21"
